# wasm-profiling

./: .gitmodules
wamr/: .gitlab-ci.yml  Makefile  flake.nix
wamr/.ci/: embench.yml
wamr/stm32/: CMakeLists.txt  run-benches.py
wamr/stm32/l4/: CMakeLists.txt
wamr/stm32/results/: 05-03_18-56-29.csv  05-04_10-12-40.csv  05-05_09-45-58.csv  05-05_16-45-33.csv  05-05_17-04-27.csv  05-05_17-08-21.csv  05-08_08-45-01.csv  05-08_08-59-22.csv  05-08_10-19-38.csv  05-08_13-00-17.csv  05-10_14-28-56.csv  05-12_14-40-21.csv  05-12_14-42-54.csv  05-22_11-57-42.csv  05-23_21-25-22__coremark-aot-semihosted.csv  05-23_21-29-57__coremark-semihosted.csv  05-23_22-31-47__coremark-semihosted.csv  05-30_14-54-26.csv  05-30_16-02-08.csv  05-30_16-19-21.csv  06-01_10-15-43.csv  06-01_14-45-01.csv  06-01_14-49-35.csv  06-01_14-54-20.csv  06-01_14-58-23.csv  06-02_12-14-51.csv  06-02_12-33-17.csv  07-05_16-40-25.csv  07-12_10-51-18.csv  07-12_11-14-08.csv  07-12_11-31-48.csv  07-13_09-32-54.csv  07-13_12-56-26.csv  07-14_12-04-11.csv  07-14_12-14-26.csv  07-24_16-03-27__aot.csv  07-24_17-59-42__aot-semi.csv  07-25_14-18-00__embench-standalone.csv  07-26_08-13-15__embench-semihosted.csv  07-27_13-04-05__embench-aot-semihosted.csv  (+16 more)
wamr/stm32/src/: benchmarks-defs.h  benchmarks.c  benchmarks.h  main.c
wamr/stm32/src/platform/: platform_api_vmcore.c  platform_internal.h
wasm3/: .gitignore  openocd.cfg  shell.nix
wasm3/stm32/: CMakeLists.txt  run-benches.py
wasm3/stm32/f4/: CMakeLists.txt  device.ld  init.c
wasm3/stm32/l4/: CMakeLists.txt  init.c  trace.out
wasm3/stm32/results/: 06-03_15-54-38__embench.csv  07-24_11-56-44.csv  07-27_17-37-39__embench.csv  08-01_09-14-33__embench.csv  08-01_09-28-42__benchmarksgame.csv  08-14_13-40-39__coremark.csv  08-16_19-18-49__dhrystone-standalone.csv  09-11_21-24-48__embench.csv  09-16_16-37-39__embench.csv  09-20_15-46-23__embench.csv
wasm3/stm32/src/: benchmarks.c  benchmarks.h  init.h  main.c
wasmi/: .gitignore  Cargo.toml  generate-headers.py  shell.nix
wasmi/.cargo/: config.toml
wasmi/staticlib/: Cargo.toml
wasmi/staticlib/src/: lib.rs
wasmi/stm32/: CMakeLists.txt  TC-arm.cmake  run-benches.py
wasmi/stm32/l4/: CMakeLists.txt  device.ld
wasmi/stm32/results/: 01-12_19-38-00__embench-standalone_embench.csv  06-03_14-24-50__embench-standalone_Oz.csv  06-03_14-55-30__embench-standalone_O3.csv  06-03_15-58-38__embench-standalone_Os.csv
wasmi/stm32/src/: benchmarks-defs.h  benchmarks.c  benchmarks.h  main.c
